--- a/equipment/templates/equipment/equipment_stock_keep.html
+++ b/equipment/templates/equipment/equipment_stock_keep.html
@@ -1,38 +1,69 @@
 {% extends 'base.html' %} {% block content %} {% load static %}
 
 <div class="container">
-    <div class="card equipment">
-        <div class="card-header equipment__header">
+    <div class="card stock">
+        <div class="card-header stock__header">
             <i class="fa fa-tasks"></i>
-            <h5 class="card-title equipment__title">&nbsp; [{{stock_mnfacture_name}} /
+            <h5 class="card-title stock__title">&nbsp; [{{stock_mnfacture_name}} /
                 {{stock_model_name}}] 재고 현황</h5>
             <span class="total-count">{{total_count}}</span>
         </div>
         <div class="card-body">
-            <div class="equipment__contents form-row">
+            <div class="form-row">
                 <div class="form-group col-md-12">
                     <div class="form-group">
+                        <div class="form-group stock-form">
+                            <div class="card stock-contents">
+                                <div class="card-body stock-lists">
+                                    <h5 class="card-title text-right">{{stock_model_name}}</h5>
+                                    <div class="stock-status-lists">
+                                        <div id="stock-status" class="stock-status__sold sold">
+                                            <div class="sold-title">납 품</div>
+                                            <div class="sold-count"
+                                                onclick="goToDetailPage(event, {{stock_product_model}} ,`sold`)">
+                                                {{stock_sold_count}}</div>
+                                        </div>
+                                        <div id="stock-status" class="stock-status__return return">
+                                            <div class="return-title">반 납</div>
+                                            <div class="return-count"
+                                                onclick="goToDetailPage(event, {{stock_product_model}} ,`return`)">
+                                                {{stock_return_count}}</div>
+                                        </div>
+                                        <div id="stock-status" class="stock-status__disposal disposal">
+                                            <div class="disposal-title">폐 기</div>
+                                            <div class="disposal-count"
+                                                onclick="goToDetailPage(event, {{stock_product_model}} ,`disposal`)">
+                                                {{stock_disposal_count}}</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="form-group mulit-form">
                             <input type="hidden" id="stock-model-name" value="{{stock_model_name}}">
                             <button type="button" class="btn btn-success" data-toggle="modal" id="selectSubmitStocks"
-                                data-target="#exampleModal" onclick="checkSelectedStocks()">일괄
+                                data-target="#exampleModal" onclick="checkSelectedStocks()">일괄<br>
                                 납품</button>
                             <button type="button" class="btn btn-warning" data-toggle="modal" id="selectSubmitStocks"
-                                data-target="#multiReturnModal" onclick="returnStocks()">일괄
+                                data-target="#multiReturnModal" onclick="returnStocks()">일괄<br>
                                 반납</button>
                             <button type="button" class="btn btn-dark" data-toggle="modal"
                                 data-target="#multiDisposalModal" onclick="disposalStocks()">
-                                일괄 폐기
+                                일괄<br>폐기
                             </button>
                             <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#delete-modal"
                                 onclick="deleteStocks()">
-                                일괄 삭제
+                                일괄<br>삭제
                             </button>
                         </div>
+
                         <table class="table table-striped table-bordered table-hover assets_table " id="stock-table">
                             <thead>
                                 <tr>
-                                    <th>선택</th>
+                                    <th class="th-checkBox" onclick="pageCheckTheBox(event)" id="th-checkBox">
+                                        <input class="form-check-input position-static" type="checkbox"
+                                            id="blankCheckbox">
+                                    </th>
                                     <th>시리얼</th>
                                     <th>제품명</th>
                                     <th>재고 위치</th>
@@ -41,11 +72,10 @@
                                 </tr>
                             </thead>
                             {% for stock in stocks %}
-                            <tr>
+                            <tr class="rows">
                                 <td class="td-checkBox" onclick="checkTheBox(event)" id="td-checkbox">
                                     <input class="form-check-input position-static" type="checkbox" id="blankCheckbox"
                                         value="{{stock.id}}">
-
                                 </td>
                                 <td>
                                     <a href="{% url 'equipment_stock_edit' stock_id=stock.id %}">
@@ -453,7 +483,7 @@
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
 <link rel="stylesheet" href="{% static 'css/datepicker/datepicker3.css' %}">
 <link rel="stylesheet" href="{% static 'css/equipment/stockDelivery.css' %}">
-
+<link rel="stylesheet" href="{% static 'css/equipment/stockList.css' %}">
 {% endblock %}
 
 {% block js %}
@@ -464,5 +494,6 @@
 <script src="{% static 'js/datepicker/bootstrap-datepicker.kr.js' %}"></script>
 <script src="{% static 'js/datepicker/datepicker.js' %}"></script>
 <script src="{% static 'js/equipment/stockDetail.js' %}"></script>
+<script src="{% static 'js/equipment/stockGotoDetail.js' %}"></script>
 <script src="{% static 'js/datatable/dataTable.js' %}"></script>
 {% endblock %}
