--- a/equipment/templates/equipment/equipment_stock_upload.html
+++ b/equipment/templates/equipment/equipment_stock_upload.html
@@ -33,11 +33,11 @@
                                     <li>기본양식을 임의로 수정하여 업로드 하지 마세요.</li>
                                     <li>파일 이름은 변경되어도 상관 없습니다.</li>
                                     <li>시트의 이름은 "재고신규등록" 의 이름을 사용해야 합니다.</li>
-                                    <li>정보기입 중 아래의 3개 항목은 정확히 입력해야 합니다. (추후, 유의어를 등록하여 정상적으로 등록이 가능하게 개발할 예정)
+                                    <li>정보기입 중 아래의 2개 항목은 정확히 입력해야 합니다. (추후, 유의어를 등록하여 정상적으로 등록이 가능하게 개발할 예정)
                                         <ul>
-                                            <li>제조사, 제품명, 모델명</li>
+                                            <li>제조사, 모델명</li>
                                             <li>정보 확인<br>
-                                                <i class="fa fa-arrow-circle-right"></i> 위의 3개 항목은 "정보 조회" 메뉴에서
+                                                <i class="fa fa-arrow-circle-right"></i> 위의 2개 항목은 "정보 조회" 메뉴에서
                                                 확인
                                                 후 정확히 기입 바랍니다.</li>
                                         </ul>
