[MODFIY] Added client and delivery date info in table

--- a/equipment/templates/equipment/equipment_stock_sold.html
+++ b/equipment/templates/equipment/equipment_stock_sold.html
@@ -15,7 +15,6 @@
                         <div class="form-group stock-form">
                             <div class="card stock-contents">
                                 <div class="card-body stock-lists">
-                                    <h5 class="card-title text-right">{{stock_model_name}}</h5>
                                     <div class="stock-status-lists">
                                         <div id="stock-status" class="stock-status__keep keep">
                                             <div class="keep-title">재 고</div>
@@ -44,18 +43,20 @@
                         <table class="table table-striped table-bordered table-hover assets_table " id="myTable1">
                             <thead>
                                 <tr>
+                                    <th>고객사</th>
                                     <th>시리얼</th>
-                                    <th>입고 위치</th>
-                                    <th>입고 날짜</th>
-                                    <th>상태</th>
+                                    <th>납품처</th>
+                                    <th>입고 일자</th>
+                                    <th>납품 일자</th>
                                 </tr>
                             </thead>
-                            {% for stock in stocks %}
+                            {% for sold in solds %}
                             <tr>
-                                <td>{{ stock.serial }}</td>
-                                <td>{{ stock.location }}</td>
-                                <td>{{ stock.receive_date }}</td>
-                                <td>납품 완료</td>
+                                <td>{{ sold.client }}</td>
+                                <td>{{ sold.serial }}</td>
+                                <td>{{ sold.location }}</td>
+                                <td>{{ sold.receive_date }}</td>
+                                <td>{{ sold.install_date }}</td>
                             </tr>
                             {% endfor %}
                         </table>
@@ -72,8 +73,7 @@
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
 <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
 <link rel="stylesheet" href="{% static 'css/datepicker/datepicker3.css' %}">
-<link rel="stylesheet" href="{% static 'css/equipment/stockDelivery.css' %}">
-<link rel="stylesheet" href="{% static 'css/equipment/stockList.css' %}">
+<link rel="stylesheet" href="{% static 'css/equipment/stockDetail.css' %}">
 {% endblock %}
 
 {% block js %}
