--- a/equipment/templates/equipment/equipment_main.html
+++ b/equipment/templates/equipment/equipment_main.html
@@ -2,70 +2,50 @@
 
 <div class="container">
     <div class="card equipment">
-        <div class="card-header document__header">
+        <div class="card-header equipment__header">
             <i class="fa fa-external-link"></i>
             <h5 class="card-title equipment__title">&nbsp;납품 현황</h5>
         </div>
         <div class="card-body">
-            <div class="equipment__contents form-row">
-                <div class="form-group col-md-12">
-                    <div class="form-group">
-                        <table class="table table-striped table-bordered table-hover assets_table " id="myTable1">
-                            <thead>
-                                <tr>
-                                    <th>고객사</th>
-                                    <th>제조사</th>
-                                    <th>제품명</th>
-                                    <th>모델명</th>
-                                    <th>시리얼</th>
-                                    <th>납품 장소</th>
-                                    <th>납품 일자</th>
-                                    <th>담당 엔지니어</th>
-                                    <th>기 타</th>
-                                </tr>
-                            </thead>
-                            {% for equipment in equipments %}
-                            <tr>
-                                <td>
-                                    <a href="{% url 'equipment_detail' equipment_id=equipment.id %}">
-                                        {{ equipment.client }}
-                                    </a>
-                                </td>
-                                <td>{{ equipment.mnfacture }}</td>
-                                <td>{{ equipment.product }}</td>
-                                <td>{{ equipment.product_model }}</td>
-                                <td>{{ equipment.serial }}</td>
-                                <td>{{ equipment.location }}</td>
-                                <td>{{ equipment.install_date }}</td>
-                                <td>{{ equipment.manager }}</td>
-                                <td>
-                                    {% if equipment.comments == "" %}
-                                    -
-                                    {% else %}
-                                    {{ equipment.comments }}
-                                    {% endif %}
-                                </td>
-                            </tr>
-                            {% endfor %}
-                        </table>
+            {% csrf_token %}
+            <div class="form-row">
+                <div class="form-group col-md-12 equipment__contents">
+                    <div class="form-group contents__select">
+                        <div class="select-client">
+                            <span>고객사 선택</span>
+                            {{equipment_form.client}}
+                        </div>
+                        <div class="select-mnfacture">
+                            <span>제조사 선택</span>
+                            <select class="selectpicker" id='mnfacture' data-live-search="true" data-container="body"
+                                disabled>
+                                <option>고객사를 선택하세요</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="form-group contents__header">
+                        <div class="header header__client-name"></div>
+                    </div>
+                    <div class="form-group contents__content">
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
 </div>
 
 
-{% endblock %} {% block title %} 고객사 운용제품현황 {% endblock %}
+{% endblock %} {% block title %} 납품 현황 {% endblock %}
 {% block css %}
+<link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
+<link rel="stylesheet" href="{% static 'css/equipment/equipmentMain.css' %}">
 <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
-<link rel="stylesheet" href="{% static 'css/equipment.css' %}">
 {% endblock %}
 
 {% block js %}
-<script src="{% static 'js/equipment/upload.js' %}"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
 <script src="{% static 'js/datatable/dataTable.js' %}"></script>
+<script src="{% static 'js/equipment/equipmentMain.js' %}"></script>
+<script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
 {% endblock %}
