[MODFIY] header title

--- a/equipment/templates/equipment/equipment_client_detail.html
+++ b/equipment/templates/equipment/equipment_client_detail.html
@@ -13,7 +13,7 @@
             {% csrf_token %}
             <div class="form-group contents">
                 <div class="form-group contents-header">
-                    <span>고객사</span>
+                    <span>제조사</span>
                     <div class="mnfacture" id="mnfacture"></div>
                 </div>
 
