--- a/equipment/templates/equipment/equipment_model_detail.html
+++ b/equipment/templates/equipment/equipment_model_detail.html
@@ -5,18 +5,17 @@
         <div class="card-header equipment__header">
             <i class="fa fa-external-link"></i>
             <h5 class="card-title equipment__title">
-                &nbsp;{{client}}[{{mnfacture}}]
+                &nbsp;{{client}}[{{mnfacture}} / {{product_model}}]
                 <span class="badge badge-primary">{{count}}</span>
             </h5>
         </div>
         <div class="card-body">
             {% csrf_token %}
             <div class="form-group">
-                <table class="table table-striped table-bordered table-hover assets_table " id="myTable1">
+                <table class="table table-striped table-bordered table-hover" id="myTable1">
                     <thead>
                         <tr>
                             <th>시리얼</th>
-                            <th>모델명</th>
                             <th>납품처</th>
                             <th>납품 일자</th>
                             <th>기 타</th>
@@ -29,7 +28,6 @@
                                 {{ equipment.serial }}
                             </a>
                         </td>
-                        <td>{{ equipment.product_model }}</td>
                         <td>{{ equipment.location }}</td>
                         <td>{{ equipment.install_date }}</td>
                         <td>
@@ -47,7 +45,7 @@
     </div>
 
 
-    {% endblock %} {% block title %} {% endblock %}
+    {% endblock %} {% block title %} [{{mnfacture}} / {{product_model}}] {% endblock %}
     {% block css %}
     <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
