[REMOVED] input of sales

--- a/equipment/templates/equipment/equipment_stock_keep.html
+++ b/equipment/templates/equipment/equipment_stock_keep.html
@@ -144,12 +144,8 @@
                 </div>
                 <div class="form-group ">
                     <label>유지보수 만료 일자</label>
-                    <input type="text" name="maintenance-date" id="equipment-maintenance-date"
+                    <input type="text" name="maintenance-date" id="equipment-maintenance-date" data-provide="datepicker"
                         class="form-control calendar__start hasDatepicker" autocomplete="off" placeholder="&#xf073;">
-                </div>
-                <div class="form-group">
-                    <label>담당 엔지니어 혹은 영업</label>
-                    <input type="text" class="form-control" id="manager" autocomplete="off" name="manager">
                 </div>
                 <div class="form-group">
                     <label>납품처</label>
