--- a/equipment/templates/equipment/equipment_client_detail.html
+++ b/equipment/templates/equipment/equipment_client_detail.html
@@ -10,11 +10,10 @@
             </h5>
         </div>
         <div class="card-body">
-            {% csrf_token %}
             <div class="form-group contents">
                 <div class="form-group contents-header">
                     <span>제조사</span>
-                    <div class="mnfacture" id="mnfacture"></div>
+                    <div class="mnfacture" id="select-mnfacture"></div>
                 </div>
 
                 <table class="table table-striped table-bordered table-hover display" id="equipmentAllTable">
@@ -25,8 +24,9 @@
                             <th>모델명</th>
                             <th>납품처</th>
                             <th>납품 일자</th>
+                            <th>상 태</th>
                             <th>유지보수</th>
-                            <th>기 타</th>
+                            <th>신 청</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -41,6 +41,13 @@
                             <td>{{ equipment.product_model }}</td>
                             <td>{{ equipment.location }}</td>
                             <td>{{ equipment.install_date }}</td>
+                            <td>
+                                {% if equipment.status == "operating" %}
+                                운영 중
+                                {% else %}
+                                RMA 장비
+                                {% endif %}
+                            </td>
                             <td>
                                 {% if equipment.expire_maintenance_check.expire == "true" %}
                                 <span class="badge badge-danger">
@@ -64,11 +71,11 @@
                                     {% endfor %}
                                 </span>
                                 {% endif %}
-
                             </td>
                             <td>
                                 <button type="button" class="btn btn-outline-primary" data-toggle="modal"
-                                    data-target="#applyStatus">
+                                    data-target="#applyStatus" id="status-change"
+                                    onclick="statusChangeBtnOnClient(event)">
                                     상태변경</button>
                             </td>
                         </tr>
@@ -78,50 +85,81 @@
             </div>
         </div>
     </div>
-
-    <div class="modal fade" id="applyStatus" tabindex="-1" role="dialog" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content" id="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">장비 상태변경</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+</div>
+<div class="modal fade" id="applyStatus" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content" id="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">장비 상태변경</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <form class="modal-body" method="POST" id="modal-body">
+                {% csrf_token %}
+                <div class="form-group">
+                    <span>구 분</span>
+                    <select class="selectpicker" title="구분 선택" id="equipment-status" data-actions-box="true">
+                        <option value="rma">RMA</option>
+                        <option value="disposal">폐기</option>
+                        <option value="return">반납</option>
+                    </select>
                 </div>
-                <form class="modal-body" method="POST" id="modal-body">
-                    {% csrf_token %}
+                <div class="form-group" id="rma-form">
                     <div class="form-group">
-                        <span>구 분</span>
-                        <select class="selectpicker" title="구분 선택" id="support-kind" data-actions-box="true">
-                            <option value="operating">운영 중</option>
-                            <option value="rma">RMA</option>
-                            <option value="disposal">폐기</option>
-                            <option value="return">반납</option>
-                        </select>
+                        <span>제조사</span>
+                        {{equipment_form.mnfacture}}
                     </div>
                     <div class="form-group">
-                        <label>기 타</label>
-                        <textarea class="form-control col-sm-12" rows="5"></textarea>
+                        <span>모델명</span>
+                        {{equipment_form.product_model}}
                     </div>
-                </form>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-outline-danger" data-dismiss="modal">닫기</button>
-                    <button type="button" class="btn btn-outline-primary">신청</button>
+                    <div class="form-group">
+                        <span>교체 시리얼</span>
+                        <input type="text" class="form-control" id="serial" autocomplete="off" name="serial">
+                    </div>
                 </div>
+                <div class="form-group">
+                    <label>기 타</label>
+                    <textarea class="form-control col-sm-12" rows="5" id="comments"></textarea>
+                </div>
+                <div class="card" id="equipment-card">
+                    <h5 class="card-header" id="equipment-card-title">장비 정보</h5>
+                    <div class="card-body" id="equipment-card-body">
+                        <div class="media" id="equipment-contents">
+                            <i class="fa fa-hdd-o"></i>
+                            <div class="media-body">
+                                <h5 class="mt-0" id="equipment-mnfacture"></h5>
+                                <ul class="list-group list-group-flush" id="equipment-info">
+                                    <li id="equipment-info-model"></li>
+                                    <li id="equipment-info-serial"></li>
+                                    <li id="equipment-info-location"></li>
+                                    <li id="equipment-info-deliveryDate"></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </form>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-danger" data-dismiss="modal">닫기</button>
+                <button type="button" class="btn btn-outline-primary" onclick="submitStatusChange()">신청</button>
             </div>
         </div>
     </div>
+</div>
 
 
-    {% endblock %} {% block title %} {{client}} 납품 현황 {% endblock %}
-    {% block css %}
-    <link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
-    {% endblock %}
+{% endblock %} {% block title %} {{client}} 납품 현황 {% endblock %}
+{% block css %}
+<link rel="stylesheet" href="{% static 'css/selectpicker/bootstrap-select.css' %}">
+<link rel="stylesheet" href="https://cdn.datatables.net/1.10.20/css/dataTables.bootstrap4.min.css">
+{% endblock %}
 
-    {% block js %}
-    <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
-    <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
-    <script src="{% static 'js/datatable/dataTable.js' %}"></script>
-    <script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
-    {% endblock %}
+{% block js %}
+<script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
+<script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static 'js/datatable/dataTable.js' %}"></script>
+<script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
+<script src="{% static 'js/equipment/equipmentStatusChange.js' %}"></script>
+{% endblock %}
