--- a/equipment/templates/equipment/equipment_client_detail.html
+++ b/equipment/templates/equipment/equipment_client_detail.html
@@ -159,6 +159,7 @@
 {% block js %}
 <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"></script>
+<script src="{% static 'js/equipment/productModelLists.js' %}"></script>
 <script src="{% static 'js/datatable/dataTable.js' %}"></script>
 <script src="{% static 'js/selectpicker/bootstrap-select.js' %}"></script>
 <script src="{% static 'js/equipment/equipmentStatusChange.js' %}"></script>
