--- a/equipment/templates/equipment/equipment_stock_form.html
+++ b/equipment/templates/equipment/equipment_stock_form.html
@@ -20,7 +20,7 @@
                             {{ equipment_form.product_model }}
                         </div>
                         <div class="form-group">
-                            <label>시리얼 </label>
+                            <label>시리얼</label>
                             <input type="text" class="form-control" id="serial" autocomplete="off" name="serial">
                         </div>
                         <div class="form-group ">
@@ -65,5 +65,6 @@
 <script src="{% static 'js/datepicker/bootstrap-datepicker.kr.js' %}"></script>
 <script src="{% static 'js/datepicker/datepicker.js' %}"></script>
 <script src="{% static 'js/equipment/stockForm.js' %}"></script>
+<script src="{% static 'js/equipment/productModelLists.js' %}"></script>
 <script src="{% static 'js/sites/jquery.form.js' %}"></script>
 {% endblock %}
